[tool.poetry]
name = "leetcode-python"
version = "0.1.0"
description = ""
authors = ["imajinyun <imajinyun@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "leetcode_python"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
